--- a/EFBlazor/Components/Pages/CategoryPages/CategoryList.razor
+++ b/EFBlazor/Components/Pages/CategoryPages/CategoryList.razor
@@ -2,12 +2,15 @@
 @inherits ListPageBase<Category, CategoryService, CategoryFilter>
 
 <h3>Categories</h3>
-
-@if(Result is null)
+<p>Page: @Page</p>
+@if (Result is null)
 {
     <p>Loading...</p>
     return;
 }
+
+
+<a class="btn btn-primary mt-3" href="/categories/create">Create New Category</a>
 
 <table class="table">
     <thead>
@@ -32,16 +35,15 @@
     </tbody>
 </table>
 
-<!-- Create New Category -->
-<a class="btn btn-primary mt-3" href="/categories/create">Create New Category</a>
-
+@if (Result.TotalPages > 1)
+{
+    <Pagination ItemsPerPage="Filter.PageSize"
+                TotalItems="Result.Total"
+                CurrentPageNumber="Page"
+                NavUrl="/categories?Page=" />
+}
 
 @code {
-    
-
-    
-
-
     private async Task DeleteCategory(int id)
     {
         await Service.DeleteAsync(id);
