--- a/EFBlazor/Components/Pages/ProductPages/ProductList.razor
+++ b/EFBlazor/Components/Pages/ProductPages/ProductList.razor
@@ -1,7 +1,16 @@
 ﻿@page "/products"
-@inject ProductService productService
+@inherits ListPageBase<Product, ProductService, ProductFilter>
 
-<h3>Produkte</h3>
+<h3>Products</h3>
+
+<p>Page: @Page</p>
+@if (Result is null)
+{
+    <p>Loading...</p>
+    return;
+}
+
+<a class="btn btn-primary mt-3" href="/products/create">Create New Product</a>
 
 <table class="table">
     <thead>
@@ -14,27 +23,25 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var product in products)
+        @foreach (var item in Result.Items)
         {
             <tr>
-                <td>@product.ProductId</td>
-                <td>@product.Name</td>
-                <td>@product.Price.ToString("C")</td>
-                <td>@product.Category?.Name</td>
+                <td>@item.ProductId</td>
+                <td>@item.Name</td>
+                <td>@item.Price.ToString("C")</td>
+                <td>@item.Category?.Name</td>
                 <td>
-                    
+                    <a href="@($"/products/edit/{item.ProductId}")" class="btn btn-warning">Edit</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
-@code {
-    private List<Product> products = new();
-
-    protected override async Task OnInitializedAsync()
-    {
-        products = await productService.GetAsync();
-    }
-
+@if (Result.TotalPages > 1)
+{
+    <Pagination ItemsPerPage="Filter.PageSize"
+                TotalItems="Result.Total"
+                CurrentPageNumber="Page"
+                NavUrl="/products?Page=" />
 }
