--- a/EFBlazor/Components/Pages/CategoryPages/CategoryEdit.razor
+++ b/EFBlazor/Components/Pages/CategoryPages/CategoryEdit.razor
@@ -1,6 +1,5 @@
-﻿@page "/categories/edit/{id:int}"
-@inject CategoryService CategoryService
-@inject NavigationManager Navigation
+﻿@page "/categories/edit/{identifier:int}"
+@inherits EditPageBase<Category, CategoryService, int?>
 
 <h3>Edit Category</h3>
 
@@ -17,27 +16,9 @@
 </EditForm>
 
 
-<button class="btn btn-primary" @onclick="SaveCategory">Save</button>
-<button class="btn btn-secondary" @onclick="Cancel">Cancel</button>
+<button class="btn btn-primary" @onclick="SaveAsync">Save</button>
+<button class="btn btn-secondary" @onclick="CancelAsync">Cancel</button>
 
 @code {
-    [Parameter] public int Id { get; set; }
-
-    public Category? Input { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        Input = await CategoryService.GetAsync(Id);
-    }
-
-    private async Task SaveCategory()
-    {
-        await CategoryService.UpdateAsync(Input!);
-        Navigation.NavigateTo("/categories");
-    }
-
-    private void Cancel()
-    {
-        Navigation.NavigateTo("/categories");
-    }
+    protected override string GetListUrl() => "/categories";
 }
